--- a/desktop-menu.html
+++ b/desktop-menu.html
@@ -32,6 +32,7 @@
       height: auto;
       border: 1px solid var(--very-light-pink);
       border-radius: 6px;
+      padding: 20px 20px 0 20px;
     }
 
     .desktop-menu ul {
@@ -42,6 +43,27 @@
 
     .desktop-menu ul li {
       text-align: end;
+    }
+
+    .desktop-menu ul li:nth-child(1),
+    .desktop-menu ul li:nth-child(2) {
+      font-weight: bold;
+    }
+    
+    .desktop-menu ul li:last-child {
+      padding-top: 20px;
+      border-top: 1px solid var(--very-light-pink);
+    }
+
+    .desktop-menu ul li:last-child  a{
+      color: var(--hospital-green);
+    }
+
+    .desktop-menu ul li a{
+      display: inline-block;
+      color: var(--black);
+      text-decoration: none;
+      margin-bottom: 20px;
     }
 
 
